# noteapp

./: readme.md
.github/workflows/: build.yml
app/: .gitignore  README.md  eslint.config.js  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
app/.github/workflows/: build.yml
app/docs/: readme.md
app/src/: app.css  app.html
app/src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
app/src-tauri/docs/: readme.md
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: commands.rs  controller.rs  main.rs  tray.rs
app/src-tauri/src/shortcuts/: mod.rs
app/src-tauri/src/shortcuts/disable_quicknote/: macos.rs  mod.rs  windows.rs
app/src/api/: index.ts  update.ts
app/src/fonts/: font.css
app/src/lib/: index.ts
app/src/lib/components/: Sidebar.svelte
app/src/lib/components/common/: Alert.svelte  DropDown.svelte  ErrorComponent.svelte  Icon.svelte  Modal.svelte  Portal.svelte  Spinner.svelte  Toggle.svelte  Typography.svelte
app/src/lib/components/customWindow/: MacOs.svelte  Windows.svelte
app/src/lib/components/editor/: BubbleMenu.svelte  Editor.svelte  MenuButton.svelte  SlashCommandMenu.svelte  TableOptions.svelte  codeblockNodeView.ts  extensions.ts  registerCodeExt.ts  slashCommandList.ts  tableOptions.ts
app/src/lib/components/editor/extensions/: index.ts  registerCodeExt.ts  slashCommands.ts
app/src/lib/components/editor/nodeView/: codeblock.ts  codeblockNodeView.ts  renderer.ts  table.ts
app/src/lib/components/menu/: Main.svelte  MenuItems.svelte  items.ts
app/src/lib/components/search/: Index.svelte
app/src/lib/components/settings/: Index.svelte  Updater.svelte  index.ts
app/src/lib/components/settings/tabs/: Home.svelte
app/src/lib/components/sidebar/: FileListItem.svelte  Index.svelte  SearchContent.svelte
app/src/lib/hooks/: TauriEventListener.svelte  WindowEvent.svelte
app/src/routes/: +layout.svelte  +page.svelte
app/src/routes/quickNotes/: +page.svelte
app/src/routes/shortNotes/: +page.svelte
app/src/store/: context.ts  index.ts  settings.ts
app/src/types/: index.ts
app/src/utils/: constants.ts  errors.ts  index.ts
app/static/assets/: site.webmanifest
backend/noteapp_lib/: Cargo.toml  settings.toml
backend/noteapp_lib/src/: lib.rs
backend/noteapp_lib/src/app_settings/: mod.rs
backend/noteapp_lib/src/errors/: mod.rs
backend/noteapp_lib/src/fs/: async_fs.rs  mod.rs
backend/noteapp_lib/src/storage/: disk.rs  mod.rs  notion.rs
backend/noteapp_macros/: Cargo.toml
backend/noteapp_macros/src/: lib.rs
backend/rust/src/: lib.rs
backend/rust/src/app_settings/: mod.rs
backend/rust/src/fs/: async_fs.rs  mod.rs
backend/rust/src/storage/: disk.rs  mod.rs  notion.rs
installation/: readme.md
